test/fail/string_index_type.zn
# ERRORS: 1
# Indexing a string with a non-int type

func main() {
    let s = "hello"
    let ch = s["bad"]
    0
}
